--- a/index.html
+++ b/index.html
@@ -12,124 +12,143 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Web<span class="logo-header">Studio</span></a>
-        <nav class="site-nav">
-            <ul>
-                <li>
-                    <a href="#" class="link current">Студия</a>
+        <div class="container header-container">
+            <a href="#" class="logo">Web<span class="logo-header">Studio</span></a>
+            <nav class="site-nav">
+                <ul class="navigation-list">
+                    <li class="navigation-item">
+                        <a href="#" class="link current navigation-link">Студия</a>
+                    </li>
+                    <li class="navigation-item">
+                    <a href="./portfolio.html"class="link navigation-link" >Портфолио</a>
+                    </li>
+                    <li class="navigation-item">
+                        <a href="#" class="link navigation-link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="site-contacts">
+                <li class="contacts-item">
+                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
                 </li>
-                <li>
-                <a href="./portfolio.html"class="link" >Портфолио</a>
+                <li class="contacts-item">
+                    <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
                 </li>
-                <li>
-                    <a href="#" class="link">Контакты</a>
-                </li>
-            </ul>
-        </nav>
-        <ul class="site-contacts">
-            <li>
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-            </li>
-        </ul>
+            </ul>            
+        </div>
     </header>
+    
     <main>
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="button">Заказать услугу</button>
+           <div class="container">
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <button type="button" class="button">Заказать услугу</button>       
+           </div>
         </section>
-        <section class="features">
-            <h2 class="features-title">Наши преимущества</h2>
-                <ul>
-                    <li>
+        <section class="features section">
+            <div class="container">
+                <h2 class="features-title">Наши преимущества</h2>
+                <ul class="set-features">
+                    <li class="item">
                         <h3>Внимание к деталям</h3>
-                        <p>
-                            Идейные соображения, а также начало повседневной работы по формированию позиции.
-                        </p>
+                            <p>
+                                Идейные соображения, а также начало повседневной работы по формированию позиции.
+                            </p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3>Пунктуальность</h3>
-                        <p>
-                            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                        </p>
+                            <p>
+                                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                            </p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3>Планирование</h3>
-                        <p>
-                            Равным образом консультация с широким активом в значительной степени обуславливает.
-                        </p>
+                            <p>
+                                Равным образом консультация с широким активом в значительной степени обуславливает.
+                            </p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3>Современные технологии</h3>
-                        <p>
-                            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                        </p>
+                            <p>
+                                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                            </p>
+                    </li>
+
+                </ul>                
+            </div>
+        </section>
+        <section class="directions section">
+            <div class="container">
+                <h2 class="directions-title">
+                    Чем мы занимаемся
+                </h2>
+                <ul class="set-directions">
+                    <li class="item">
+                        <img src="./images/works-1.jpg" alt="программсит пишет код"
+                            width="370" />
+                    </li>
+                    <li class="item">
+                        <img src="./images/works-2.jpg" alt="UI дизайнер разрабатывает интерфейс мобильного приложения"
+                            width="370" />
+                    </li>
+                    <li class="item">
+                        <img src="./images/works-3.jpg" alt="UI дизайнер работает над цветовым выбором"
+                            width="370" />
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="team section">
+            <div class="container">
+                <h2 class="team-title">
+                    Наша команда
+                </h2>
+
+                <ul class="set-team">
+
+                    <li class="team-item">
+                        <img src="./images/employee-1.jpg" alt="Игорь Демьяненко - Продуктовий Дизайнер" width="270"/>
+                        <h3 class="team-name">Игорь Демьяненко</h3> 
+                        <p class="team-text">Product Designer</p>
+                    </li>
+
+                    <li class="team-item">
+                        <img src="./images/employee-2.jpg" alt="Ольга Репина - Frontend разработчик" width="270"/>
+                        <h3 class="team-name">Ольга Репина</h3>
+                        <p class="team-text">Frontend Developer</p> 
+                    </li>
+
+                    <li class="team-item">
+                        <img src="./images/employee-3.jpg" alt="Николай Тарасов -  маркетинг" width="270"/>
+                        <h3 class="team-name">Николай Тарасов</h3>
+                        <p class="team-text">Marketing</p>
+                    </li>
+
+                    <li class="team-item">
+                        <img src="./images/employee-4.jpg" alt="Михаил Ермаков -  UI дизайнер" width="270"/>
+                        <h3 class="team-name">Михаил Ермаков</h3>
+                        <p class="team-text">UI Designer</p> 
                     </li>
 
                 </ul>
-        </section>
-        <section class="directions">
-            <h2 class="directions-title">
-                Чем мы занимаемся
-            </h2>
-            <ul>
-                <li>
-                    <img src="./images/works-1.jpg" alt="программсит пишет код"
-                        width="370" />
-                </li>
-                <li>
-                    <img src="./images/works-2.jpg" alt="UI дизайнер разрабатывает интерфейс мобильного приложения"
-                        width="370" />
-                </li>
-                <li>
-                    <img src="./images/works-3.jpg" alt="UI дизайнер работает над цветовым выбором"
-                        width="370" />
-                </li>
-            </ul>
-        </section>
-        <section class="team">
-            <h2 class="team-title">
-                Наша команда
-            </h2>
-            <ul>
-                <li>
-                        <img src="./images/employee-1.jpg" alt="Игорь Демьяненко - Продуктовий Дизайнер" width="270"/>
-                           <h3>Игорь Демьяненко</h3> 
-                           <p>Product Designer</p>
-                </li>
-                <li>
-                        <img src="./images/employee-2.jpg" alt="Ольга Репина - Frontend разработчик" width="270"/>
-                        <h3>Ольга Репина</h3>
-                        <p>Frontend Developer</p>
-                </li>
-                <li>
-                        <img src="./images/employee-3.jpg" alt="Николай Тарасов -  маркетинг" width="270"/>
-                        <h3>Николай Тарасов</h3>
-                        <p>Marketing</p>
-                </li>
-                <li>
-                        <img src="./images/employee-4.jpg" alt="Михаил Ермаков -  UI дизайнер" width="270"/>
-                        <h3>Михаил Ермаков</h3>
-                        <p>UI Designer</p>
-                </li>
-            </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a href="#" class="logo">Web<span class="logo-footer">Studio</span></a>
-        <address class="contacts-footer">
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="#" class="logo">Web<span class="logo-footer">Studio</span></a>
+            <address class="contacts-footer">
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <ul>
+                    <li>
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 </html>
