--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="container header-container">
-            <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
+            <a href="./index.html" class="logo-header">Web<span class="logo">Studio</span></a>
             <nav class="site-nav">
                 <ul class="navigation-list">
                     <li class="navigation-item">
@@ -144,7 +144,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a href="#" class="logo">Web<span class="logo-footer">Studio</span></a>
+            <a href="#" class="logo-footer">Web<span class="logo-studio">Studio</span></a>
             <address class="contacts-footer">
                 <ul class="list">
                     <li class="footer-item">
