--- a/portfolio.html
+++ b/portfolio.html
@@ -44,19 +44,19 @@
             <div class="container">
                 <h1 class="visually-hidden">Наши работы</h1>
                     <ul class="button-list">
-                        <li>
+                        <li class="button-item">
                             <button type="button" class="link link-current">Все</button>
                         </li>
-                        <li>
+                        <li class="button-item">
                             <button type="button" class="link">Веб-сайты</button>
                         </li>
-                        <li>
+                        <li class="button-item">
                             <button type="button" class="link">Приложения</button>
                         </li>
-                        <li>
+                        <li class="button-item">
                             <button type="button" class="link">Дизайн</button>
                         </li>
-                        <li>
+                        <li class="button-item">
                             <button type="button" class="link">Маркетинг</button>
                         </li>
                     </ul>
